--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,20 +9,9 @@
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp">
 
-    <EditText
-        android:id="@+id/username_edittext"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/displaySessionID"
         android:layout_height="wrap_content"
-        android:hint="Username"/>
-    <EditText
-        android:id="@+id/password_edittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"/>
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="login"/>
+        android:layout_width="wrap_content"/>
 
 </LinearLayout>
