--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -5,10 +5,40 @@
     android:layout_height="match_parent"
     tools:context=".Views.MovieDetail.MovieDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:id="@+id/img_poster"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        />
     <TextView
+        android:id="@+id/txt_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Movie Detail" />
+        android:layout_height="50dp"
+        android:layout_marginLeft="150dp"
+        android:textSize="20dp"/>
+    <TextView
+        android:id="@+id/txt_desc"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="60dp"/>
+
+    <ImageButton
+        android:id="@+id/btn_addToFav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:src="@drawable/ic_baseline_star_24" />
+    <TextView
+        android:id="@+id/txt_companies_name"
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
+    <TextView
+        android:id="@+id/txt_release"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"/>
 
 </FrameLayout>
