--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -14,6 +14,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMovie"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="675dp"
+        android:layout_marginTop="50dp" />
 
 </FrameLayout>
