--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -11,4 +11,10 @@
         android:layout_height="match_parent"
         android:text="Favorites" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMovie"
+        android:layout_width="match_parent"
+        android:layout_height="675dp"
+        android:layout_marginTop="50dp" />
+
 </FrameLayout>
