--- a/app/src/main/res/layout/list_movies.xml
+++ b/app/src/main/res/layout/list_movies.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <Button
+        android:id="@+id/buttonMovie"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/imageMovie"
         android:layout_width="150dp"
