--- a/app/src/main/res/layout/list_movies.xml
+++ b/app/src/main/res/layout/list_movies.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:alpha="0" />
 
     <ImageView
         android:id="@+id/imageMovie"
