--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -9,52 +9,70 @@
         android:id="@+id/img_poster"
         android:layout_width="150dp"
         android:layout_height="200dp"
+        android:layout_marginTop="10dp"
         />
-    <TextView
-        android:id="@+id/txt_title"
+    <ScrollView
+        android:id="@+id/scroll_title"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="150dp"
-        android:textSize="20dp"/>
+        android:layout_marginTop="10dp">
+        <TextView
+            android:id="@+id/txt_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"/>
+    </ScrollView>
     <ScrollView
         android:id="@+id/scroll_desc"
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="60dp">
+        android:layout_marginTop="70dp">
         <TextView
             android:id="@+id/txt_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    </ScrollView>
 
+    <ScrollView
+        android:id="@+id/scroll_companies_name"
+        android:layout_marginTop="220dp"
+        android:layout_marginLeft="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+        <TextView
+            android:id="@+id/txt_companies_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/scroll_release"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="270dp">
+        <TextView
+            android:id="@+id/txt_release"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"/>
     </ScrollView>
 
     <ImageButton
         android:id="@+id/btn_addToFav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="310dp"
         android:src="@drawable/ic_baseline_star_border_24"
         android:clickable="false"/>
     <ImageButton
         android:id="@+id/btn_addToWatchlist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginLeft="60dp"
         android:src="@drawable/ic_baseline_playlist_add_24"
         android:clickable="false"/>
-    <TextView
-        android:id="@+id/txt_companies_name"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="100dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
-    <TextView
-        android:id="@+id/txt_release"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"/>
 
     <EditText
         android:id="@+id/editTxt_rate"
@@ -62,21 +80,21 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="370dp"
         android:text="0.5"/>
     <TextView
         android:id="@+id/txt_rateMax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="/10"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="390dp"
         android:layout_marginLeft="50dp"/>
     <Button
         android:id="@+id/btn_rate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rate"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="370dp"
         android:layout_marginLeft="80dp"
         android:clickable="false"/>
 
