Set watchlist page

--- a/app/src/main/res/layout/fragment_watchlist.xml
+++ b/app/src/main/res/layout/fragment_watchlist.xml
@@ -6,9 +6,11 @@
     tools:context=".Views.Watchlist.WatchlistFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMovie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Watchlist" />
+        android:layout_marginTop="10dp" />
 
 </FrameLayout>
