--- a/app/src/main/res/menu/bottom_navigator.xml
+++ b/app/src/main/res/menu/bottom_navigator.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/watchlist_frag"
         android:icon="@drawable/ic_baseline_playlist_play_24"
-        android:title="Favorite"/>
+        android:title="Watchlist"/>
     <item
         android:id="@+id/search_frag"
         android:icon="@drawable/ic_baseline_search_24"
